--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
         </div>
       </div>
 
-      <div class="project-card group cursor-pointer bg-white rounded-2xl overflow-hidden shadow-sm hover:shadow-2xl hover:-translate-y-1 transition-all duration-300 border border-gray-100 reveal reveal-delay-100"
+      <div class="project-card group cursor-pointer bg-white rounded-2xl overflow-hidden shadow-sm hover:shadow-2xl hover:-translate-y-1 transition-all duration-300 border border-gray-100 reveal"
            data-category="ai"
            data-title="Classification de chiffres – DL"
            data-tags="Deep Learning,MLP,CNN,Python,Tinygrad,WebGPU"
@@ -455,7 +455,7 @@
         </div>
       </div>
 
-      <div class="project-card group cursor-pointer bg-white rounded-2xl overflow-hidden shadow-sm hover:shadow-2xl hover:-translate-y-1 transition-all duration-300 border border-gray-100 reveal reveal-delay-200"
+      <div class="project-card group cursor-pointer bg-white rounded-2xl overflow-hidden shadow-sm hover:shadow-2xl hover:-translate-y-1 transition-all duration-300 border border-gray-100 reveal"
            data-category="ai"
            data-title="Éditeur de Scènes 3D"
            data-tags="Computer Graphics,WGSL,Shaders,WebGPU, UI/UX"
@@ -502,7 +502,7 @@
         </div>
       </div>
 
-      <div class="project-card group cursor-pointer bg-white rounded-2xl overflow-hidden shadow-sm hover:shadow-2xl hover:-translate-y-1 transition-all duration-300 border border-gray-100 reveal reveal-delay-100"
+      <div class="project-card group cursor-pointer bg-white rounded-2xl overflow-hidden shadow-sm hover:shadow-2xl hover:-translate-y-1 transition-all duration-300 border border-gray-100 reveal"
            data-category="product"
            data-title="Campagne Kickstarter"
            data-tags="Crowdfunding,Design Produit,Marketing,Logistique"
@@ -523,7 +523,7 @@
         </div>
       </div>
 
-      <div class="project-card group cursor-pointer bg-white rounded-2xl overflow-hidden shadow-sm hover:shadow-2xl hover:-translate-y-1 transition-all duration-300 border border-gray-100 reveal reveal-delay-200"
+      <div class="project-card group cursor-pointer bg-white rounded-2xl overflow-hidden shadow-sm hover:shadow-2xl hover:-translate-y-1 transition-all duration-300 border border-gray-100 reveal"
            data-category="data"
            data-title="Prediction des prix Airbnb"
            data-tags="Data,Python,Pandas, Seaborn, Matplotlib,Scikit-Learn"
@@ -570,7 +570,7 @@
         </div>
       </div>
 
-      <div class="project-card group cursor-pointer bg-white rounded-2xl overflow-hidden shadow-sm hover:shadow-2xl hover:-translate-y-1 transition-all duration-300 border border-gray-100 reveal reveal-delay-100"
+      <div class="project-card group cursor-pointer bg-white rounded-2xl overflow-hidden shadow-sm hover:shadow-2xl hover:-translate-y-1 transition-all duration-300 border border-gray-100 reveal"
            data-category="data"
            data-title="Gestion BDD - Magasin Vélo"
            data-tags="SQL,C#,Base de données"
@@ -591,7 +591,7 @@
         </div>
       </div>
 
-      <div class="project-card group cursor-pointer bg-white rounded-2xl overflow-hidden shadow-sm hover:shadow-2xl hover:-translate-y-1 transition-all duration-300 border border-gray-100 reveal reveal-delay-200"
+      <div class="project-card group cursor-pointer bg-white rounded-2xl overflow-hidden shadow-sm hover:shadow-2xl hover:-translate-y-1 transition-all duration-300 border border-gray-100 reveal"
            data-category="product"
            data-title="Design & Conception"
            data-tags="Design,Électronique, Hardware,Arduino,Soudure,3D"
