--- a/index.html
+++ b/index.html
@@ -599,7 +599,7 @@
            data-title="Design & Conception"
            data-tags="Design,Électronique, Hardware,Arduino,Soudure,3D"
            data-desc="Série de projets hardware et DIY."
-           data-full-desc="Dans le cadre du cours 'How to Make Almost Anything', réalisation d'une série de prototypes fonctionnels : assemblage et soudure d'une console Gameboy, conception d'une flûte de pan designée et imprimée en 3D, et modification d'un signal vidéo (VGAX) via électronique."
+           data-full-desc="Dans le cadre du cours 'How to Make Almost Anything', réalisation d'une série de prototypes fonctionnels : conception d'une montre intelligente pour les coureurs, assemblage et soudure d'une console Gameboy, conception d'une flûte de pan designée et imprimée en 3D, et modification d'un signal vidéo (VGAX) via électronique."
            data-docs='[{"url":"https://oil-giraffe-c54.notion.site/Documentation-HMAA-2nd-workshop-294bf791352280d5ad24d0cfab967bf9","label":"Documentation Modélisation & Impression 3D"},{"url":"https://bow-chalk-0b1.notion.site/HMAA-Week-3-Process-images-2dfcb55dd23580b585add97a6f65caca","label":"Documentation PCB & VGAx"}]'
            data-image="https://images.unsplash.com/photo-1581092160562-40aa08e78837?w=800&q=80">
         <div class="h-48 bg-green-50 relative border-b border-gray-100 overflow-hidden">
