--- a/index.html
+++ b/index.html
@@ -958,7 +958,7 @@ document.addEventListener('DOMContentLoaded', () => {
       N’hésitez pas à me contacter si vous avez une demande ou une question,
     </p>
     <p class="text-gray-600 mb-12">
-      je me ferais un plaisir de vous répondre rapidement. 
+      je me ferai un plaisir de vous répondre rapidement. 
     </p>
 
     <div class="flex flex-col items-center gap-6">
