--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         <div class="order-2 md:order-1">
           <div class="mb-6">
             <span class="inline-block text-sm font-medium text-marine bg-poudre px-4 py-2 rounded-full mb-4">
-              Étudiante Ingénieure • Promotion 2027
+              Étudiante Ingénieure-Manager • Promotion 2027
             </span>
           </div>
           
@@ -145,8 +145,11 @@
           </p>
 
           <p class="text-gray-700 mb-8 leading-relaxed">
-            Ingénieure en Creative Technology, à la croisée entre développement logiciel, produit et innovation.
-            Je mène des projets techniques de bout en bout, de la recherche à l'implémentation logicielle et matérielle.
+            Ingénieure en Creative Technology, à la croisée entre développement logiciel, produit et innovation. Je mène des projets techniques de bout en bout, de la recherche à l'implémentation logicielle et matérielle. Je suis à la recherche d’un stage de 16 à 20 semaines à partir du 13 avril, en gestion de projet et développement de produits numériques, à l’interface entre technologie, design et usages.
+          </p>
+
+          <p class="text-gray-700 mb-10 leading-relaxed">
+            Je suis à la recherche d’un stage de 16 à 20 semaines à partir du 13 avril, en gestion de projet et développement de produits numériques, à l’interface entre technologie, design et usages.
           </p>
 
           <div class="flex flex-wrap gap-4 mb-8">
